# full-stack-rs-workshop

./: Shuttle.toml
api/db/: schema.sql
api/lib/: Cargo.toml
api/lib/src/: films.rs  health.rs
api/lib/src/film_repository/: mod.rs
api/lib/tests/: health.rs
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
