[package]
name = "api-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# actix
actix-web = "4.11.0"
# database
sqlx = { version = "0.8.6", default-features = false, features = [
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
] }
# tracing
tracing = "0.1.41"


serde = "1.0.219"
serde_json = "1.0.140"


async-trait = "0.1.88"
uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }

shared = { path = "../../shared" }

[dev-dependencies]
actix-rt = "2.10.0"
